added token data to all methods that use it